Ajout des tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,11 @@
 [pytest]
 pythonpath = .
+markers =
+    unit: tests unitaires (mockés, isolés)
+    functional: tests fonctionnels (DB réelle in-memory)
+    no_bypass_auth: désactive le fixture bypass_auth pour tester le vrai _get_current_user
+    as_role(name): force le bypass_auth à utiliser un utilisateur d un rôle spécifique (ex: admin, sales, support)
+
+    
+filterwarnings =
+    ignore::sqlalchemy.exc.SAWarning
